Main menu buttons lead to proper pages.

--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sandal_app
+name: Sandal
 description: DA Sandal app.
 
 # The following defines the version and build number for your application.
