--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -14,11 +14,13 @@ description: DA Sandal app.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+
+  device_calendar: ^0.1.2+2
   http: ^0.12.0+2
   shared_preferences: ^0.5.2
   cloud_firestore: ^0.9.0
