--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -14,17 +14,20 @@ description: DA Sandal app.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  device_calendar: ^0.1.2+2
   http: ^0.12.0+2
+  intl: ^0.15.8
   shared_preferences: ^0.5.2
   cloud_firestore: ^0.9.0
+  table_calendar: ^1.2.2
   url_launcher: ^5.0.2
+  #  device_calendar: ^0.1.2+2
+  #  permission_handler: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
