--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  add_2_calendar: ^1.3.0
   http: ^0.12.0+2
   intl: ^0.15.8
   shared_preferences: ^0.5.2
