Minor text changes

--- a/sandal_app/android/app/build.gradle
+++ b/sandal_app/android/app/build.gradle
@@ -41,6 +41,9 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    dexOptions{
+        javaMaxHeapSize "4g"
+    }
 
     buildTypes {
         release {
