--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
-  shared_preferences: ^0.5.2
   cloud_firestore: ^0.9.0
+  firebase_storage: ^2.0.0
   url_launcher: ^5.0.2
+#  image_picker: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
