--- a/sandal_app/pubspec.yaml
+++ b/sandal_app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.15.8
   table_calendar: ^1.2.2
   firebase_auth: 0.11.1+6
+  webview_flutter: 0.3.9
   #  device_calendar: ^0.1.2+2
   #  permission_handler: ^3.1.0
 
